<package>
  <name>yaskawa3</name>
  <version>0.5.0</version>

  <description>This package contains a number of URDF tutorials.</description>
  <license>Project M2</license>
  <maintainer email="corentinberge@gmail.com">Corentin Bergé</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>commande_locale</build_depend>
  
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>commande_locale</run_depend>

</package>
